# OTerm

./: .gitignore  ARCHITECTURE.md  CLASS_RELATIONSHIP.md  CMakeLists.macos.txt  CMakeLists.txt  CMakeLists.win.txt  OceanTerm.icns  README.md  README_CN.md  create_icon.py  package_macos.sh  package_windows.nsi  vcpkg-configuration.json  vcpkg.json
.windsurf/: rules
config/: oc.json
locales/: en.mo  en.po  zh_CN.mo  zh_CN.po
src/: AddDeviceDialog.cpp  AddDeviceDialog.h  AppWindow.cpp  AppWindow.h  CellInstance.h  CommandInterceptor.cpp  CommandInterceptor.h  ConnectInfo.cpp  ConnectInfo.h  ConnectionDialog.cpp  ConnectionDialog.h  CustomTitleBar.cpp  CustomTitleBar.h  DeviceConfig.cpp  DeviceConfig.h  DeviceListPanel.cpp  DeviceListPanel.h  EventProxy.cpp  EventProxy.h  FileTransferDialog.cpp  FileTransferDialog.h  FileTransferTask.h  FileTransferThread.cpp  FileTransferThread.h  FontAtlas.cpp  FontAtlas.h  GlobalConfig.cpp  GlobalConfig.h  ISplitable.h  InfiniteSplitter.cpp  InfiniteSplitter.h  LocalTerminalContainer.cpp  LocalTerminalContainer.h  LocalTerminalDelegate.cpp  LocalTerminalDelegate.h  LocalTerminalManager.cpp  LocalTerminalManager.h  LocalTerminalThread.cpp  LocalTerminalThread.h  MasterPasswordDialog.cpp  (+32 more)
